# snowclaw

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  SNOWCLAW.md  bridge.toml  justfile  obsidian
.archive/: nomen-integration-v1-files.txt
.archive/nomen-patches/: 0001-feat-treat-all-as-a-mention-trigger.patch  0002-fix-agent-prevent-context-overflow-from-tool-loop-ou.patch  0003-feat-add-Nomen-memory-backend-integration.patch  0004-fix-wire-config-passthrough-signer-and-relay-for-Nom.patch  0005-fix-remove-unsafe-set_var-fix-tier-mapping-in-nomen-.patch  0006-fix-adapter-get-forget-use-raw-topic-queries-after-v.patch  0007-feat-register-nomen-as-first-class-memory-backend.patch  0008-fix-migration-reads-all-legacy-DBs-collective-archiv.patch  0009-fix-agent-degrade-memory-recall-on-repeated-failures.patch  0010-test-fix-integration-test-compile-drift.patch  0011-fix-schedule-honor-approval-for-cron-creates.patch  0012-fix-honor-HOME-override-and-tighten-skill-link-audit.patch  0013-fix-migration-derive-config-path-from-explicit-sourc.patch
.claude/: settings.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: fzqmq2ma342l98mhrfsd7l4v3sla2wbm-source
crates/bridge/: .gitignore  Cargo.toml  ROADMAP.md
crates/bridge/src/: api.rs  bridge.rs  cache.rs  cache_rusqlite.rs  cache_sqlx.rs.bak  config.rs  main.rs  profiles.rs  relay.rs  webhook.rs
crates/nostr-core/: Cargo.toml
crates/nostr-core/src/: actions.rs  context.rs  key_filter.rs  lib.rs  memory.rs  mention.rs  relay.rs  respond.rs  ring_buffer.rs  tasks.rs
crates/snow-memory/: Cargo.toml
crates/snow-memory/src/: cache.rs  config.rs  event.rs  lib.rs  publish.rs  ranking.rs  search.rs  subscribe.rs  types.rs
crates/snow-memory/tests/: integration.rs
crates/snow-ui/: Cargo.toml
crates/snow-ui/src/: lib.rs
docs/: MANIFESTO.md  ROADMAP-BRIEF.md  collective-memory-tasks.md  collective-memory.md  context-window-overflow-tool-loop.md  memory-unification-design.md  memory-unification-summary.md  nostr-channel-plugin-spec.md  rebase-guide.md  rebase-patterns.md  review-phase-0-1.md  review-spec-alignment.md  snow-ui.md
docs/roadmap/: CHANGELOG.md  ROADMAP.md
docs/spec/: SPEC-BRIEF.md  action-protocol.md  flotilla-ui.md  key-management.md  memory-context.md  nostr-events.md  security.md
src/: lib.rs  main.rs  memory_cli.rs  migration.rs  nostr_cli.rs  snowclaw_cli.rs  task_cli.rs
src/agent/: agent.rs  loop_.rs  memory_loader.rs  mod.rs  snowclaw_agent.rs
src/channels/: mod.rs  nostr.rs  nostr_memory.rs  seen_events.rs  snowclaw_channels.rs  telegram.rs  whatsapp_web.rs
src/config/: mod.rs  schema.rs  snowclaw_schema.rs
src/cost/: mod.rs  pricing.rs  tracker.rs  types.rs
src/cron/: mod.rs
src/daemon/: mod.rs
src/doctor/: mod.rs
src/gateway/: api.rs  mod.rs
src/integrations/: mod.rs  registry.rs
src/mcp/: contextvm.rs  (+3 more)
test-fixtures/: mention-vectors.json
tests/: collective_memory_v2.rs  nostr_integration.rs
ui/: index.html  package.json  tsconfig.json
wt/: nomen
(+65 files in other folders)
