[package]
name = "nostr-bridge"
version = "1.0.0"
edition = "2021"
description = "Rust Nostr bridge for OpenClaw - compatible with bridge.toml"
authors = ["OpenClaw"]

[dependencies]
# Local dependencies
nostr-core = { path = "../nostr-core" }
nostr-sdk = { version = "0.44", features = ["nip04", "nip44"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
lru = "0.12"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
shellexpand = "3.1"
uuid = { version = "1.0", features = ["v4"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

[[bin]]
name = "bridge"
path = "src/main.rs"