[package]
name = "nostr-core"
version = "0.1.0"
edition = "2021"
authors = ["theonlyhennygod"]
license = "Apache-2.0"
description = "Shared Nostr protocol functionality for Snowclaw"

[dependencies]
# Nostr protocol
nostr-sdk = { version = "0.44", features = ["nip04", "nip44", "nip59"] }

# Async runtime
tokio = { version = "1.42", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Logging
tracing = { version = "0.1", default-features = false }

# Error handling
anyhow = "1.0"

# Regex for key filtering
regex = "1.10"

# Time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }