[package]
name = "snow-memory"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Collective memory types, ranking, and Nostr event schema for Snowclaw"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
toml = "1.0"
