[package]
name = "snow-ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASM bindings for Snow UI — exposes snow-memory ranking and conflict resolution to JavaScript"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
snow-memory = { path = "../snow-memory" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
